[gd_scene load_steps=15 format=3 uid="uid://deim3rm6ie4sf"]

[ext_resource type="Script" path="res://src/ui/pause_menu_layer.gd" id="1_txh50"]
[ext_resource type="Shader" path="res://assets/shaders/pause_blur.gdshader" id="2_xa214"]
[ext_resource type="Theme" uid="uid://c485aq3nvu4j0" path="res://assets/game_theme.theme" id="3_5l66r"]
[ext_resource type="FontFile" uid="uid://dmjqgqkcftiq2" path="res://assets/fonts/PressStart2P.ttf" id="4_xai1f"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fmpqs"]
shader = ExtResource("2_xa214")
shader_parameter/blur = 1.0
shader_parameter/brightness = 1.0

[sub_resource type="FontVariation" id="FontVariation_y5rfr"]
base_font = ExtResource("4_xai1f")
spacing_glyph = 1
spacing_top = 10
spacing_bottom = 8

[sub_resource type="LabelSettings" id="LabelSettings_fcj6b"]
font = SubResource("FontVariation_y5rfr")
font_size = 32
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.631373)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_et304"]

[sub_resource type="InputEventAction" id="InputEventAction_8t7rt"]
action = &"ui_cancel"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_0gmtl"]
events = [SubResource("InputEventAction_8t7rt")]

[sub_resource type="Animation" id="Animation_o33m1"]
resource_name = "Pause"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/brightness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(-0.5, -2),
"update": 0,
"values": [1.0, 0.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/blur")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(-0.5, -2),
"update": 0,
"values": [1.0, 3.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ContentsLayer:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 540), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_swwqb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/brightness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/blur")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ContentsLayer:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 540)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_5ie50"]
resource_name = "UnPause"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/brightness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [0.5, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/blur")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [3.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ContentsLayer:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 540)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ayex"]
_data = {
"Pause": SubResource("Animation_o33m1"),
"RESET": SubResource("Animation_swwqb"),
"UnPause": SubResource("Animation_5ie50")
}

[node name="PauseMenuLayer" type="CanvasLayer"]
process_mode = 3
layer = 50
offset = Vector2(0, 540)
transform = Transform2D(1, 0, 0, 1, 0, 540)
script = ExtResource("1_txh50")
main_menu_scene = "res://src/ui/main_menu.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_fmpqs")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_5l66r")

[node name="ContentsLayer" type="CanvasLayer" parent="."]
process_mode = 4
layer = 75
offset = Vector2(0, 540)
transform = Transform2D(1, 0, 0, 1, 0, 540)

[node name="CenterContainer" type="CenterContainer" parent="ContentsLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="ContentsLayer/CenterContainer"]
custom_minimum_size = Vector2(320, 270)
offset_left = 320.0
offset_top = 135.0
offset_right = 640.0
offset_bottom = 405.0

[node name="MarginContainer" type="MarginContainer" parent="ContentsLayer/CenterContainer/PanelContainer"]
offset_right = 320.0
offset_bottom = 270.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="ContentsLayer/CenterContainer/PanelContainer/MarginContainer"]
offset_left = 16.0
offset_right = 304.0
offset_bottom = 254.0

[node name="Label" type="Label" parent="ContentsLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
offset_right = 288.0
offset_bottom = 68.0
text = "Paused"
label_settings = SubResource("LabelSettings_fcj6b")
horizontal_alignment = 1
vertical_alignment = 2

[node name="HSeparator" type="HSeparator" parent="ContentsLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 72.0
offset_right = 288.0
offset_bottom = 84.0
theme_override_constants/separation = 12
theme_override_styles/separator = SubResource("StyleBoxEmpty_et304")

[node name="ResumeButton" type="Button" parent="ContentsLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 88.0
offset_right = 288.0
offset_bottom = 169.0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
shortcut = SubResource("Shortcut_0gmtl")
text = "Resume"

[node name="QuitButton" type="Button" parent="ContentsLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 173.0
offset_right = 288.0
offset_bottom = 254.0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8ayex")
}
